# Calypso

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
app/: fonts.ts  globals.css  layout.tsx  page.tsx
calypso-cli/: Cargo.toml
calypso-cli/src/: gql_client.rs  location_command.rs  main.rs  perform_get_location_weather.rs  perform_get_user_location.rs  weather_command.rs
calypso-cli/src/gql-queries/: location_weather.graphql  user_location.graphql
components/: Appv1.tsx  ForecastContainer.tsx  LocationInfo.tsx  Switch.tsx
components/LeftSection/: CentralBody.tsx  CentralWeatherInfo.tsx  ForecastContainerRow.tsx  LeftSection.tsx  NavBar.tsx  Settings.tsx
components/Loading/: CentralWeatherInfoSkeleton.tsx  ForecastContainerRowSkeleton.tsx  ForecastContainerSkeleton.tsx  LocationInfoSkeleton.tsx
components/RightSection/: CentralBody.tsx  CentralWeatherInfo.tsx  Clock.tsx  ForecastContainerRow.tsx  HourlyForecastGrid.tsx  HourlyForecastRow.tsx  LocationPrompt.tsx  NavBar.tsx  RightSection.tsx  Settings.tsx  SmallWeatherBody.tsx  SuggestionHint.tsx  SuggestionItem.tsx  SuggestionList.tsx
graphql-backend-server/: .env  codegen.yml  package-lock.json  package.json
graphql-backend-server/src/: GeoLocationInfo.ts  index.ts  location-api.ts  schema.graphql  weather-api.ts
utils/: RightSectionContext.ts  RightSectionSettings.ts  WeatherContext.ts  WeatherSettings.ts  filterHourlyForecast.ts  getDayDescription.ts  getFormatedTime.tsx  getLocationDescription.ts  getWeatherDescription.ts  gql-client.ts  timeProvider.ts
(+7 files in other folders)
