[package]
name = "poem-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = "0.13.0"
serde = { version = "1.0.193", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
tokio = { version = "1.34.0", features = ["full"] }
